# sqlite-vec-client

./: .coveragerc  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY_IMPROVEMENTS.md  TESTING.md  TODO  mkdocs.yml  pyproject.toml  pytest.ini  requirements-dev.txt  setup.py  test_security.py
.github/: changelog-config.json
.github/workflows/: README.md  publish.yml  test.yml
benchmarks/: __init__.py  __main__.py  benchmark_crud.py  config.yaml  config_loader.py  operations.py  reporter.py  runner.py  utils.py
docs/: api.md  index.md  operations.md
docs/guides/: migration.md
examples/: advanced_metadata_queries.py  basic_usage.py  batch_operations.py  connection_pool_example.py  context_manager.py  export_import_example.py  logging_example.py  metadata_filtering.py  persistent_database.py  real_world_scenario.py  transaction_example.py
sqlite_vec_client/: __init__.py  base.py  exceptions.py  io.py  logger.py  pool.py  types.py  utils.py  validation.py
tests/: __init__.py  conftest.py  test_client.py  test_io.py  test_logger.py  test_pool.py  test_security.py  test_utils.py  test_validation.py
